# nightfire-open

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  copyright.txt  readme.md  todo.txt  vcpkg.json
game/: .gitignore  CMakeLists.txt  check-content-hash.py  content-copyback-monitor.py  content-hash.txt  run-content-copyback-linux.sh.in  run-content-copyback-windows.bat.in  update-content-hash.py
game/assets/graphics/: game-logo.psd  main-menu-wallpaper.tga  sniper-scope.psd
game/assets/maps/: .gitignore  Afterburner.fgd  compileMap.py
game/assets/models/: .gitignore
game/assets/mp-player-screenshots/: params.txt
game/content/: .gitignore  CMakeLists.txt  remove-temp-and-autosave-files.py
game/content/afterburner/: 1280_textscheme.txt  1600_textscheme.txt  800_textscheme.txt  config.cfg  debug_populateweaponatts.cfg  delta.lst  filesystem_stdio.dylib  game.icns  game.tga  gameinfo.txt  listenserver.cfg  settings.scr  user.scr
game/content/nfopen/: 1024_textscheme.txt  1152_textscheme.txt  640_textscheme.txt  GameServerConfig.vdf  config.cfg  gameinfo.txt  keyboard.cfg  listenserver.cfg  server.cfg  skill.cfg  spectatormenu.txt  spectcammenu.txt  titles.txt  userconfig.cfg  video.cfg
game/content/tools/: NightfireOpen.fgd  mapeditor.txt
game/game_libs/: CMakeLists.txt
game/game_libs/cl_dll/: CMakeLists.txt  StudioModelRenderer.cpp  ammo.h  ammohistory.h  battery.cpp  cl_util.h  com_weapons.cpp  death.cpp  entity.cpp  ev_common.cpp  ev_hldm.cpp  eventscripts.h  health.cpp  health.h  hud.h  hud_crosshair.cpp  hud_msg.cpp  hud_spectator.cpp  hud_update.cpp  saytext.cpp  tri.cpp  view.h
game/game_libs/cl_dlls/: CMakeLists.txt  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  MOTD.cpp  StudioModelRenderer.cpp  StudioModelRenderer.h  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  camera.h  cdll_int.cpp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  demo.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  eventscripts.h  flashlight.cpp  geiger.cpp  health.cpp  health.h  hud.cpp  hud.h  hud_crosshair.cpp  hud_crosshair.h  hud_iface.h  hud_msg.cpp  hud_redraw.cpp  hud_spectator.cpp  hud_spectator.h  (+28 more)
game/game_libs/common/: activity.h  basemonster.h  beamdef.h  bspfile.h  cbase.h  cdll_dll.h  cl_entity.h  com_model.h  com_strings.h  con_nprint.h  const.h  cvardef.h  damagedefs.h  debug_assert.h  demo_api.h  dlight.h  effects.h  enginecallback.h  entity_state.h  entity_types.h  event_api.h  event_args.h  event_flags.h  exportdef.h  extdll.h  game.h  gameinfo.h  gamerules.h  hltv.h  hornet.h  hulldefs.h  ivoicetweak.h  lightstyle.h  mathlib.h  monsterevent.h  monsters.h  net_api.h  netadr.h  nodes.h  particledef.h  (+23 more)
game/game_libs/dlls/: AI_BaseNPC_Schedule.cpp  CMakeLists.txt  activitymap.h  aflock.cpp  agrunt.cpp  airtank.cpp  animating.cpp  animation.cpp  animation.h  apache.cpp  barnacle.cpp  barney.cpp  bigmomma.cpp  bloater.cpp  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  client.cpp  client.h  combat.cpp  controller.cpp  decals.h  defaultai.cpp  defaultai.h  doors.cpp  doors.h  effects.cpp  explode.cpp  explode.h  flyingmonster.cpp  flyingmonster.h  func_break.cpp  func_break.h  func_tank.cpp  game.cpp  gargantua.cpp  genericmonster.cpp  ggrenade.cpp  globals.cpp  (+74 more)
game/game_libs/engine/: anorms.h  cdll_exp.h  cdll_int.h  custom.h  customentity.h  edict.h  eiface.h  keydefs.h  menu_int.h  mobility_int.h  physint.h  progdefs.h  shake.h  sprite.h  studio.h  warpsin.h
game/game_libs/game_shared/: bitvec.h  studio_utils_shared.cpp  studio_utils_shared.h  vgui_checkbutton2.cpp  vgui_checkbutton2.h  vgui_defaultinputsignal.h  vgui_grid.cpp  vgui_grid.h  vgui_helpers.cpp  vgui_helpers.h  vgui_listbox.cpp  vgui_listbox.h  vgui_loadtga.cpp  vgui_loadtga.h  vgui_scrollbar2.cpp  vgui_scrollbar2.h  (+11 more)
game/miniutl/: CMakeLists.txt  bitstring.cpp  bitstring.h  fmtstr.h  strtools.cpp  strtools.h  utlbuffer.cpp  utlbuffer.h  utlmemory.cpp  utlmemory.h  utlpriorityqueue.h  utlstring.cpp  utlstring.h
libraries/buildplatform/: CMakeLists.txt
libraries/commonutils/: CMakeLists.txt
libraries/crtlib/: CMakeLists.txt
libraries/identity/: CMakeLists.txt
libraries/mathlib/: CMakeLists.txt
libraries/mempool/: CMakeLists.txt
libraries/platformlib/: CMakeLists.txt
platformlib/: CMakeLists.txt
tools/compiletools/: CMakeLists.txt  readme.md
tools/compiletools-primext/: CMakeLists.txt  readme.md
xash3d_engine/: CMakeLists.txt
xash3d_engine/common/: backends.h  beamdef.h  boneinfo.h  bspfile.h  cl_entity.h  com_image.h  com_model.h  con_nprint.h  const.h  cvardef.h  defaults.h  demo_api.h  dlight.h  enginefeatures.h  entity_state.h  entity_types.h  event_api.h  event_args.h  event_flags.h  gameinfo.h  hltv.h  ivoicetweak.h  kbutton.h  lightstyle.h  mathlib.h  net_api.h  netadr.h  particledef.h  pmtrace.h  port.h  qfont.h  r_efx.h  r_studioint.h  ref_params.h  render_api.h  screenfade.h  studio_event.h  synctype.h  triangleapi.h  usercmd.h  (+4 more)
xash3d_engine/engine/: CMakeLists.txt  alias.h  anorms.h  cdll_int.h  custom.h  customentity.h  edict.h  eiface.h  engine_builddefs.h  fscallback.h  keydefs.h  menu_int.h  mobility_int.h  physint.h  progdefs.h  ref_api.h  sequence.h  shake.h  sprite.h  staticbuildchecks.h  studio.h  vgui_api.h  warpsin.h
xash3d_engine/enginedefs/: CMakeLists.txt
xash3d_engine/enginegamesapi/: CMakeLists.txt
xash3d_engine/engineinternalapi/: CMakeLists.txt
xash3d_engine/enginepublicapi/: CMakeLists.txt
xash3d_engine/enginerefapi/: CMakeLists.txt
xash3d_engine/filesystem/: CMakeLists.txt  VFileSystem009.cpp  VFileSystem009.h  dir.c  filesystem.c  filesystem.h  filesystem_internal.h  fscallback.h  pak.c  wad.c  zip.c
xash3d_engine/game_launch/: CMakeLists.txt  bond.sh  game.cpp  game.rc  icon info.txt
xash3d_engine/pm_shared/: pm_defs.h  pm_info.h  pm_movevars.h
xash3d_engine/public/: CMakeLists.txt  build.c  build.h  buildenums.h  crclib.c  crtlib.c  crtlib.h  matrixlib.c  miniz.h  pstdint.h  xash3d_mathlib.c  xash3d_mathlib.h
(+10349 files in other folders)
